@@ -1,6 +1,11 @@
 # ChangeLog for media-plugins/gmpc-awn
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/gmpc-awn/ChangeLog,v 1.2 2011/03/19 16:06:09 angelos Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/gmpc-awn/ChangeLog,v 1.3 2011/08/20 11:36:55 angelos Exp $
+
+*gmpc-awn-11.8.16 (20 Aug 2011)
+
+  20 Aug 2011; Christoph Mende <angelos@gentoo.org> +gmpc-awn-11.8.16.ebuild:
+  Version bump
 
   19 Mar 2011; Christoph Mende <angelos@gentoo.org> gmpc-awn-0.20.0.ebuild:
   Remove .la file
