@@ -1,6 +1,11 @@
 # ChangeLog for media-plugins/gmpc-avahi
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/gmpc-avahi/ChangeLog,v 1.26 2011/03/19 16:04:08 angelos Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/gmpc-avahi/ChangeLog,v 1.27 2011/08/20 11:34:12 angelos Exp $
+
+*gmpc-avahi-11.8.16 (20 Aug 2011)
+
+  20 Aug 2011; Christoph Mende <angelos@gentoo.org> +gmpc-avahi-11.8.16.ebuild:
+  Version bump
 
   19 Mar 2011; Christoph Mende <angelos@gentoo.org> gmpc-avahi-0.20.0.ebuild:
   Remove .la file
